
Licened under GPLv3 (see LICENSE file)

-----------------------------------------

Version 0.60.0
xx-xx-2013

- using a database instead of the whole huge in memory object for the ContentLibrary
- fixed issue #6 (https://github.com/geuma/pDLNA/issues/6) -aka- the default size for the logfile rotation
- updated copyright year
- added even more information to the WebUI

Version 0.53.0
15-08-2012

- added LowResourceMode configuration parameter for small devices like NAS and so on, audio and video files will not be openend and analyzed via Mplayer
- added some general functions to Content object for calculation total indexed amount of files, their size and the total indexing time
- changed the webgui's URL to http://IP:HTTPPort/webui/ and renamed the perl module itself too
- changed check for Mplayer - it is necessary when LowResourceMode is disabled and/or VideoThumbnails is enabled
- changed check for FFmpeg - it is necessary when TranscodingProfiles are configured

Version 0.52.0
05-08-2012

- fixed a small typo in INSTALL file, thanks to CrisAnderson
- rewrote a lot of PDLNA::DeviceList database stuff for storing more informations about the devices to maintain better compatibility and features in the future (added PDLNA::DeviceUDN, PDLNA::DeviceService and PDLNA::DeviceServiceAction Perl modules)
- added manufacturerURL for DeviceDescription XML

Version 0.51.2
21-07-2012

- improved regex to detect valid FFmpeg installation
- added some additional media formats to PDLNA::Media perl module
- improved regex to detect VLC version 2.0
- added SIZE to ContentDirectory Object, which is the size of all included items
- improved WebUI (more beautiful listings)
- added connected devices information to WebUI
- added some general process statistics to WebUI
- removed transcoding profile from default configuration file

Version 0.51.1
31-05-2012

- added halfdaily configuration parameter for RescanMediaInterval