@@ -154,7 +154,7 @@ PIDFile			/var/run/pdlna.pid
 
 # LogFileMaxSize
 # specify the maximum filesize in megabytes for the logfile
-# if the specifed size is reached, the logfile will be cleared
+# if the specified size is reached, the logfile will be cleared
 # valid values are: 0 < LogFileMaxSize < 100
 # if none is specified, it will be set to 10 megabytes
 #LogFileMaxSize 10
@@ -230,7 +230,7 @@ LogCategory		discovery,httpdir,httpstream,library,httpgeneric
 # AllowPlaylists
 #  enable AllowPlaylists configuration parameter to initialize playlist files with Mime Types: audio/x-scpls or audio/x-mpegurl
 #
-# some coniguration examples are listed below
+# some configuration examples are listed below
 <Directory "/media/video/">
 	MediaType 		video
 	Recursion 		yes
@@ -253,12 +253,19 @@ LogCategory		discovery,httpdir,httpstream,library,httpgeneric
 	AllowPlaylists 	off
 </Directory>
 
+# External
+# specify external media items, like scripts or streams, which will be added to the root
+# currently, there are two options
+#  Executable for a specified script, which needs to be executable
+#  StreamingURL for a http:// or mms:// streams
+# for Executables, a MediaType needs to be specified - currently only the following two are allowed
+#  audio
+#  video
 #
-# EXTERNAL MEDIA ITEMS
-#
-
+# some configuration examples are listed below
 #<External "mpegstream">
-#	Executable 		/media/external/mpegstream_src.pl
+#	MediaType		video
+#	Executable 		external_programs/mpegstream_src.pl
 #</External>
 
 <External "FM4">
